--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,19 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>3.0.5</version>
 		</dependency>
+<!--		4/10/23-->
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 
 	</dependencies>
 
