--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,10 @@
 	<name>tech-news-java-api</name>
 	<description>Tech News Java API Project</description>
 	<properties>
-		<java.version>17</java.version>
+<!--		4/12/2023-->
+<!--		<java.version>17</java.version>-->
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
 	</properties>
 	<dependencies>
 <!--		<dependency>-->
